--- a/productos.html
+++ b/productos.html
@@ -673,7 +673,8 @@
 		</section>
 <div class="spacer">			
 </div>
-	<section id="play-video">
+	
+	<!--<section id="play-video">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -688,7 +689,7 @@
 					</div>
 				</div>
 			</div>
-	</section>
+	</section>-->
 <div class="spacer">			
 </div>
 <section id="contact-form">
